--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html ng-app="root" ng-strict-di>
   <head>
     <meta charset="utf-8">
-    <title>Contacts Manager</title>
+    <title>Demo Video</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <base href="/">
   </head>
   <body>
     <root>
